FIX: Safari page had CSS issues with display (only on Safari)

--- a/Allen-Zhang/src/components/5-ExperienceComponents/MainExperiences.css
+++ b/Allen-Zhang/src/components/5-ExperienceComponents/MainExperiences.css
@@ -1,6 +1,11 @@
 .my-experiences {
-  min-height: 100%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  min-height: 100vh;
   width: 100%;
+  padding: 1rem;
   margin: 0 auto;
   background: linear-gradient(to bottom, rgb(65, 65, 190), rgb(35, 50, 165) 60%, rgba(0, 0, 0, 0.7)),
     linear-gradient(to right, rgba(0, 0, 0, 0.7), rgb(35, 50, 165) 20%, rgb(35, 50, 165) 80%, rgba(0, 0, 0, 0.7));
@@ -8,10 +13,11 @@
 }
 
 .experiences-container {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
+  padding: 1rem;
 }
 
 .experience {
@@ -40,7 +46,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 1rem;
+  padding: 1rem;
   height: 100%;
+}
+
+.experience-description {
+  margin: 1rem;
+  padding: 1rem;
 }
 
 .experience h3 {
@@ -96,8 +109,8 @@
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr;
-    padding: 1.5rem; 
-    margin: 1.5rem auto; 
+    padding: 1.5rem;
+    margin: 1.5rem auto;
   }
   .experience h3 {
     margin: 2rem;
@@ -117,8 +130,8 @@
     justify-content: center;
     align-items: center;
     grid-template-columns: 1fr;
-    padding: 2rem; 
-    margin: 2rem auto; 
+    padding: 2rem;
+    margin: 2rem auto;
   }
   .experience h3 {
     margin: 2.5rem;
